--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "src/index.ts",
   "scripts": {
     "test2": "jest",
-    "test": "mocha --require ts-node/register src/**/*.test.ts"
+    "test": "mocha --require ts-node/register '**/*.test.ts'",
+    "test:watch": "mocha --require ts-node/register -- --watch --no-cache '**/*.test.ts'",
+    "tree": "tree -I 'node_modules'",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
+    "tdd": "npm test -- --watch",
+    "tdd2": "jest --watch --testMatch='**/*.test.ts'"
   },
   "author": "Koustubh Desai",
   "license": "ISC",
@@ -18,7 +24,11 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/mocha": "^10.0.6",
+    "jest": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
     "mocha": "^10.4.0",
+    "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2"
   }
 }
